--- a/Journal_2_/Storyboards/Base.lproj/Main.storyboard
+++ b/Journal_2_/Storyboards/Base.lproj/Main.storyboard
@@ -1,24 +1,134 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="ioY-Fv-qJZ">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
-        <scene sceneID="tne-QT-ifu">
+        <!--Entry Listy Table View Controller-->
+        <scene sceneID="T8g-ih-r6o">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
+                <tableViewController id="Lpq-jS-2hs" customClass="EntryListyTableViewController" customModule="Journal_2_" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="TxG-g5-fFe">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="entryCell" textLabel="Pbd-81-w5a" style="IBUITableViewCellStyleDefault" id="xdr-Fn-HRp">
+                                <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="xdr-Fn-HRp" id="eFF-fo-ey3">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="Pbd-81-w5a">
+                                            <rect key="frame" x="16" y="0.0" width="343" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                </tableViewCellContentView>
+                                <connections>
+                                    <segue destination="yJW-Km-NPh" kind="show" identifier="toEntryDetail" id="23c-lc-dbD"/>
+                                </connections>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="Lpq-jS-2hs" id="SlX-qM-114"/>
+                            <outlet property="delegate" destination="Lpq-jS-2hs" id="pkh-BK-Nni"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" id="Uke-6f-aua">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="ati-6j-WhW">
+                            <connections>
+                                <segue destination="yJW-Km-NPh" kind="show" id="0Wp-GF-maj"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="entryListTableView" destination="TxG-g5-fFe" id="2nW-7i-zxN"/>
+                    </connections>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="JwI-cr-zAO" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="1104.8" y="275.71214392803603"/>
+        </scene>
+        <!--Entry Detail View Controller-->
+        <scene sceneID="n05-ct-6bJ">
+            <objects>
+                <viewController id="yJW-Km-NPh" customClass="EntryDetailViewController" customModule="Journal_2_" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="kJW-a8-3Ee">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="jVD-zV-FFi">
+                                <rect key="frame" x="28" y="99" width="319" height="30"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="V57-SO-oxg">
+                                <rect key="frame" x="28" y="164" width="319" height="468"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="jVD-zV-FFi" firstAttribute="top" secondItem="nQl-ng-Lzl" secondAttribute="top" constant="35" id="5vt-k7-rbx"/>
+                            <constraint firstItem="V57-SO-oxg" firstAttribute="centerX" secondItem="kJW-a8-3Ee" secondAttribute="centerX" id="EIw-CN-ZYj"/>
+                            <constraint firstItem="V57-SO-oxg" firstAttribute="width" secondItem="jVD-zV-FFi" secondAttribute="width" id="F4M-e8-nk7"/>
+                            <constraint firstItem="V57-SO-oxg" firstAttribute="top" secondItem="jVD-zV-FFi" secondAttribute="bottom" constant="35" id="MUt-jI-T96"/>
+                            <constraint firstItem="jVD-zV-FFi" firstAttribute="centerX" secondItem="kJW-a8-3Ee" secondAttribute="centerX" id="QAc-bn-iU4"/>
+                            <constraint firstItem="jVD-zV-FFi" firstAttribute="width" secondItem="kJW-a8-3Ee" secondAttribute="width" multiplier="0.85" id="hn6-Xa-abR"/>
+                            <constraint firstItem="nQl-ng-Lzl" firstAttribute="bottom" secondItem="V57-SO-oxg" secondAttribute="bottom" constant="35" id="ld5-SB-LwC"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="nQl-ng-Lzl"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="78i-Ui-cbO">
+                        <barButtonItem key="rightBarButtonItem" systemItem="save" id="NjY-OS-6tB">
+                            <connections>
+                                <action selector="saveButtonTapped:" destination="yJW-Km-NPh" id="94S-Uv-hRZ"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="bodyTextField" destination="V57-SO-oxg" id="slK-Yz-5re"/>
+                        <outlet property="titleTextField" destination="jVD-zV-FFi" id="tIQ-NC-0iX"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="a1y-Oi-7eD" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1806" y="276"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="nub-Q5-WI2">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="ioY-Fv-qJZ" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="FJm-tp-Pr1">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="Lpq-jS-2hs" kind="relationship" relationship="rootViewController" id="D3a-x5-5vw"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="V8x-hd-KXF" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="401" y="276"/>
         </scene>
     </scenes>
+    <inferredMetricsTieBreakers>
+        <segue reference="23c-lc-dbD"/>
+    </inferredMetricsTieBreakers>
 </document>
